--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -1,13 +1,14 @@
 FROM node:22-alpine
 
-WORKDIR /srv
+WORKDIR /app
 
+# Installer dépendances
 COPY api/package*.json ./
 RUN npm ci --omit=dev
 
+# Copier le reste du code API
 COPY api/ .
 
-ENV PORT=3000
 EXPOSE 3000
 
 CMD ["node", "server.js"]
